Fix issue with wrong position of fixed-size PopUps
Fixed-size PopUps were left-aligned due to wrong CSS logic.
Changed it to center the PopUp by default.

--- a/css/sass/tpl/cabriolet/style.scss
+++ b/css/sass/tpl/cabriolet/style.scss
@@ -50,7 +50,9 @@ $col_secondary: #000002;
 
 	&.custom-size {
 		padding: 0;
+	}
 
+	&.custom-pos {
 		.wdpu-msg {
 			position: absolute;
 			display: inline-block;
